# real-debrid-download-helper

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: api.hpp  aria2_manager.hpp  shutdown_handler.hpp  tui.hpp  util.hpp
src/: api.cpp  api.hpp  aria2_manager.cpp  aria2_manager.hpp  main.cpp  shutdown_handler.cpp  tui.cpp  util.cpp  util.hpp
